--- a/app/views/admin/articles/edit.html.slim
+++ b/app/views/admin/articles/edit.html.slim
@@ -19,7 +19,12 @@
 
       = simple_form_for @article, url: admin_article_path(@article.uuid) do |f|
         .box-body
-          = f.input :state, collect: Article.states_i18n.invert, include_blank: false
+          - if @article.draft?
+            .form-group
+              label.control-label = Article.human_attribute_name(:state)
+              .form-control = @article.state_i18n
+          - else
+            = f.input :state, collect: Article.states_i18n.invert, include_blank: false
 
           = f.input :published_at, as: :date_time_picker
           = f.input :title
