--- a/app/views/admin/articles/article_blocks/_show_embed.html.slim
+++ b/app/views/admin/articles/article_blocks/_show_embed.html.slim
@@ -1,9 +1,8 @@
 .box-body
-  - if embed.youtube?
-    - if embed.identifier?
+  - if embed.identifier?
+    - if embed.youtube?
       = render 'shared/embed_youtube', embed: embed, width: 560, height: 315
-  - elsif embed.twitter?
-    - if embed.identifier?
+    - if embed.twitter?
       = render 'shared/embed_twitter', embed: embed, width: 560, height: 315
 
 .box-footer
