--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -33,14 +33,12 @@
 
 .main_images_box {
   display: flex;
-}
-
-.main_images_box .main_image {
-  text-align: center;
-  padding: 1rem;
-}
-
-.main_images_box .main_image img {
-  display: block;
-  margin-bottom: 1rem;
+  .main_image {
+    text-align: center;
+    padding: 1rem;
+    img {
+      display: block;
+      margin-bottom: 1rem;
+    }
+  }
 }
