--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -78,34 +78,26 @@
   }
 }
 
-.swiper-container {
-  margin-left: auto;
-  margin-right: auto;
+header {
   position: relative;
-  overflow: hidden;
-  list-style: none;
-  padding: 0;
-  z-index: 1;
-}
 
-.swiper-wrapper {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-  display: flex;
-  transition-property: transform;
-  box-sizing: content-box;
-}
+  .swiper-container {
+    img {
+      width: 100%;
+      height: 400px;
+      object-fit: cover;
+    }
+  }
 
-.blog-title {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -59%);
-  color: white;
-  z-index: 10;
-  a {
+  .blog-title {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -59%);
     color: white;
+    z-index: 10;
+    a {
+      color: white;
+    }
   }
 }
